fix(like-button): center text, jumping width

--- a/src/pages/ui-kits-form/ui-kits-form.scss
+++ b/src/pages/ui-kits-form/ui-kits-form.scss
@@ -129,7 +129,7 @@
 
   &__like-button-item {
     &:nth-child(1) {
-      margin-right: 2px;
+      margin-right: 10px;
     }
   }
 
